pushing close/paywall init

--- a/paywallExample.html
+++ b/paywallExample.html
@@ -12,22 +12,26 @@
 </head>
 <body>
    
+
+<!-- this is a modal to prompt the user to pay their monies-->
+
+<div class="prompt-modal prompt-text">
+        <div class="prompt-title">
+            Buy The Expanded Level 2 DLC To Continue Playing!
+        </div>
+        <button data-iziModal-close class="icon-close">x</button>
+        <div class="prompt-body">
+        <p>The intent is to provide players with a sense of pride and accomplishment! <br><br> Buy more levels, or... play this level <br>
+        for an estimated 4000 hours to gain enough coins to progress!</p>
+            <div class="sub-body-text">
+            Use FA Studios virtual currency coins to purchase levels, giving you a selection of new <br>
+            FA studios heroes, levels, sprite designs and other valuable resources to continue your FA Studio hero's journey. 
+            </div>
+        </div>
+    </div>
+
+
          <div class="slider-container modal paywall1">
-
-                <div class="prompt-text">
-                    <div class="prompt-title">
-                        Buy The Expanded Level 2 DLC To Continue Playing!
-                    </div>
-                    <div class="prompt-body">
-                    <p>The intent is to provide players with a sense of pride and accomplishment! <br><br> Buy more levels, or... play this level <br>
-                    for an estimated 4000 hours to gain enough coins to progress!</p>
-                        <div class="sub-body-text">
-                        Use FA Studios virtual currency coins to purchase levels, giving you a selection of new <br>
-                        FA studios heroes, levels, sprite designs and other valuable resources to continue your FA Studio hero's journey. 
-                        </div>
-                    </div>
-                </div>
-
                 <div class="slide-single">
                   <a href="javascript:void(0)" class="eightbit-btn eightbit-btn--proceed">Replay Level 1</a>
                 </div>
