--- a/paywallExample.html
+++ b/paywallExample.html
@@ -22,7 +22,7 @@
         </div>
         <button data-iziModal-close class="icon-close">x</button>
         <div class="prompt-body">
-        <p style="font-size: 14px;s">The intent is to provide players with a sense of pride and accomplishment! <br> Buy more levels, or... play this level <br>
+        <p style="font-size: 14px;">The intent is to provide players with a sense of pride and accomplishment! <br> Buy more levels, or... play this level <br>
         for an estimated 4000 hours to gain enough coins to progress!</p>
             <div class="sub-body-text">
             Use FA Studios virtual currency coins to purchase levels, giving you a selection of new <br>
